# Pallet-for-non-fungible-assets

./: Cargo.toml  README.md
src/: lib.rs
